Bug fix- about us alignment

--- a/src/assets/style/components/_about-us.scss
+++ b/src/assets/style/components/_about-us.scss
@@ -1,4 +1,6 @@
 .about-us-container {
+    display: flex;
+    justify-content: center;
     margin-top: 48px;
     width: 100%;
     background-color: $secondary-gray-clr;
@@ -7,6 +9,8 @@
         margin-inline-start: 20px;
         margin-block-end: 48px;
         display: flex;
+        width: 1440px;
+        justify-content: space-around;
         flex-direction: column;
 
 
@@ -47,11 +51,6 @@
                 justify-content: flex-end;
             }
 
-            @media (min-width:1000px) {
-                margin-inline-start: 132px;
-
-            }
-
             .stores {
                 display: flex;
                 flex-direction: column;
@@ -60,8 +59,6 @@
                     margin-top: 32px;
                     flex-direction: row;
                     gap: 16px;
-
-
 
                 }
 
